[tool.poetry]
name = "wizmsg"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"

[tool.poetry.group.test.dependencies]
pylint = "^2.17.4"
pytest = "^9.0.3"
hypothesis = "^6.79.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
